@@ -73,11 +73,17 @@ GNU/Linux system, the CD or DVD image file can be written to a USB stick
 as follows, after having made sure that the stick is unmounted:
 
 <informalexample><screen>
-<prompt>#</prompt> <userinput>dd if=<replaceable>debian.iso</replaceable> of=/dev/<replaceable>sdX</replaceable></userinput>
+<prompt>#</prompt> <userinput>cp <replaceable>debian.iso</replaceable> /dev/<replaceable>sdX</replaceable></userinput>
 <prompt>#</prompt> <userinput>sync</userinput>
 </screen></informalexample>
 
-</para>
+</para><important><para>
+
+Simply writing the CD or DVD image to USB like this should work fine
+for most users. The other options below are more complex, mainly for
+people with specialised needs.
+
+</para></important>
 
   </sect2>
 
