@@ -26,6 +26,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
     sure the stick is unmounted. Closes: #660776.
   * Rename kbd-chooser component to console-setup.
   * Fix preseeding for keyboard-configuration.
+  * Simply use cp instead of dd to prepare USB stick.
+
+  [ Steve McIntyre ]
+  * Make it clearer how we expect users to write CDs to USB sticks.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
